Aligned border radius

--- a/assets/styles/layout/_doc.scss
+++ b/assets/styles/layout/_doc.scss
@@ -125,7 +125,7 @@
         line-height: 1.5;
         padding: 1rem;
         font-weight: 500;
-        border-radius: var(--border-radius);
+        border-radius: 10px;
         background-color: var(--doc-highlight-text-bg);
         color: var(--doc-highlight-text-color);
     }
