Cosmetics for doc section buttons

--- a/assets/styles/layout/_doc.scss
+++ b/assets/styles/layout/_doc.scss
@@ -235,7 +235,8 @@
     background: rgba(255,255,255,.05);
     border-radius: 10px;
     padding: 4px;
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(6px);
+    box-shadow: 0 0 10px 1px rgba(187, 247, 208, .6);
     
     button {
         outline: 0 none;
