Add selection colors

--- a/assets/styles/layout/_core.scss
+++ b/assets/styles/layout/_core.scss
@@ -19,6 +19,11 @@ a {
     text-decoration: none;
 }
 
+::selection {
+    background-color: var(--highlight-bg);
+    color: var(--highlight-text-color);
+} 
+
 h1, h2, h3, h4, h5, h6 {
     margin: 1.5rem 0 1rem 0;
     font-family: inherit;
