Adjust padding based on news

--- a/assets/styles/layout/landing/_main.scss
+++ b/assets/styles/layout/landing/_main.scss
@@ -61,6 +61,10 @@
         border-bottom: 0 none;
         overflow: hidden;
     }
+
+    &.layout-news-active {
+        padding-top: 6rem;
+    }
 }
 
 .text-secondary {
