--- a/assets/styles/layout/variables/landing/_dark.scss
+++ b/assets/styles/layout/variables/landing/_dark.scss
@@ -1,7 +1,7 @@
 .landing.layout-dark {
-    --home-highlight-color:#10b981;
-    --home-highlight-darker-color:#059669;
-    --home-highlight-fore-color:#ffffff;
+    --home-highlight-color:#6ee7b7;
+    --home-highlight-darker-color:#34d399;
+    --home-highlight-fore-color:#030712;
     --home-bg:#111827;
     --home-border-color:#424b57;
     --home-primary-text-color:#ffffff;
