--- a/assets/styles/layout/_core.scss
+++ b/assets/styles/layout/_core.scss
@@ -12,7 +12,10 @@ body {
     color: var(--text-color);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    transition: background-color .5s;
+}
+
+.layout-wrapper {
+    background-color: var(--surface-ground);
 }
 
 a {
