--- a/assets/styles/layout/_doc.scss
+++ b/assets/styles/layout/_doc.scss
@@ -82,7 +82,7 @@
         opacity: 0.7;
         margin-left: 1rem;
         display: none;
-        transition: opacity 0.3s, colors 0.3s;
+        transition: opacity .3s, color .3s;
     }
 
     &:hover {
