Prevent color transition on toggle buttons

--- a/public/themes/mira/theme.css
+++ b/public/themes/mira/theme.css
@@ -5903,4 +5903,9 @@
   .p-datatable .p-datatable-tbody > tr.p-datatable-dragpoint-bottom > td {
     box-shadow: inset 0 -2px 0 0 #5E81AC;
   }
+
+  .p-selectbutton > .p-button,
+.p-togglebutton.p-button {
+    transition: background-color 0.2s, border-color 0.2s, box-shadow 0.2s;
+  }
 }
